nuclearbomb/namespaces/default/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: default
  labels:
    app: adguard
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - image: adguard/adguardhome:v0.107.59
          name: adguard
          volumeMounts:
            - name: config
              mountPath: /opt/adguardhome/conf
            - name: work
              mountPath: /opt/adguardhome/work
          ports:
            - containerPort: 80
            - containerPort: 3000
            - containerPort: 853
            - containerPort: 443
            - containerPort: 784
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
              ephemeral-storage: 128Mi
            requests:
              cpu: 10m
              memory: 256Mi
      volumes:
        - name: work
          nfs:
            server: 192.168.4.38
            path: /mnt/meow/adguard/work
            readOnly: false
        - name: config
          nfs:
            server: 192.168.4.38
            path: /mnt/meow/adguard/config
            readOnly: false
