nuclearbomb/namespaces/default/adguard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "adguard.hiibolt.com"
  rules:
    - backendRefs:
        - name: adguard
          port: 80
